--- a/src/app/pages/technology/technology.scss
+++ b/src/app/pages/technology/technology.scss
@@ -204,15 +204,39 @@
         }
     }
 
+    .strips {
+        margin: 0;
+    }
+
     #tutor {
-        min-height: 48vw;
+        background-color: #f5f5f5;
+        height: 70rem;
         overflow-y: hidden;
-        padding: 0;
+        padding: 4rem 0 0;
         position: relative;
+
+        @include desktop {
+            padding-top: 8rem;
+        }
+
+        h2 {
+            font-size: 2.1rem;
+            line-height: 1.6;
+        }
+
+        .boxed {
+            position: relative;
+            z-index: 1;
+        }
 
         .header {
             color: lighten(rgb(66, 66, 66), 13%);
+            max-height: 14rem;
             width: 100%;
+
+            @include phone {
+                max-height: 18rem;
+            }
 
             img {
                 margin-top: 2rem;
@@ -225,8 +249,9 @@
             bottom: 0;
             left: -5.6%;
             position: absolute;
+            transform: translateY(5%);
             width: 108%;
-            z-index: -1;
+            z-index: 0;
         }
 
         .btn {
@@ -234,52 +259,43 @@
             color: color(neutral-lightest);
             margin-left: 3rem;
 
+            @include phone {
+                margin-left: 0;
+                margin-top: 1.5rem;
+                width: 100%;
+            }
+
             &:first-child {
                 background-color: color(blue);
                 margin-left: 0;
             }
         }
 
-        .at-the-bottom {
-            left: 0;
-            padding-bottom: 1.5rem;
-            position: relative;
-            top: 0;
-            width: 100%;
-            z-index: 2;
+        .tall-relative {
+            height: 70rem;
+            margin-top: 3rem;
 
             @include phone {
-                margin-bottom: 4rem;
                 margin-top: 2rem;
-                position: static;
             }
-
 
             @include desktop {
-                min-height: 40vw;
-                top: calc(15vw - 10rem);
+                margin-top: 0;
+                position: relative;
             }
 
-            .boxed {
-                flex-direction: row;
-                justify-content: flex-end;
-                position: relative;
+            p {
+                margin: 1rem 0 2rem;
             }
         }
 
-        .off-to-the-right {
-            flex-basis: 50%;
-            min-width: 40rem;
+        .description-block {
 
-            @include phone {
-                flex-basis: 100%;
-                min-width: 0;
-
-                .buttons a {
-                    display: block;
-                    margin: 1rem 0;
-                    width: 100%;
-                }
+            @include desktop {
+                bottom: 30rem;
+                position: absolute;
+                right: 10rem;
+                width: 50rem;
             }
         }
     }
