Make faq text normal size

--- a/src/app/pages/openstax-tutor/openstax-tutor.html
+++ b/src/app/pages/openstax-tutor/openstax-tutor.html
@@ -291,7 +291,7 @@
                         <div class="answer" data-html="faq.items[{$item}].answer" skip="true"></div>
                     </div>
                 </div>
-                <div class="see-more qna">
+                <div class="see-more smaller qna">
                     <a href="http://openstax.force.com/support?l=en_US&c=Products%3ATutor">
                         See more answers in our knowledge base.
                     </a>
