--- a/src/app/pages/openstax-tutor/openstax-tutor.scss
+++ b/src/app/pages/openstax-tutor/openstax-tutor.scss
@@ -24,14 +24,14 @@ $deep-teal: rgb(0, 114, 151);
     }
 
     .sticky-footer {
-        background-color: rgba(245, 245, 245, 0.85);
+        background-color: rgba(245, 245, 245, 0.9);
         border-top: thin solid #d5d5d5;
         bottom: 0;
         color: #424242;
         display: flex;
         font-size: 1.6rem;
         justify-content: space-around;
-        max-height: 10rem;
+        max-height: 9rem;
         padding: 1rem;
         position: fixed;
         /* property  duration  delay */
@@ -59,6 +59,7 @@ $deep-teal: rgb(0, 114, 151);
         .button-group {
             align-items: center;
             display: flex;
+            flex: 1 1 40%;
             justify-content: center;
             padding-left: 2rem;
             transition: opacity 0.2s 0.1s;
@@ -91,10 +92,15 @@ $deep-teal: rgb(0, 114, 151);
                 flex-basis: calc(100% - 1.5rem);
                 margin: 0;
             }
+
+            @media (max-width: 565px) {
+                flex-basis: 17rem;
+                padding: 1rem;
+            }
         }
 
         .description {
-            flex: 1 1 100%;
+            flex: 1 1 50%;
 
             @include phone {
                 display: none;
@@ -392,7 +398,7 @@ $deep-teal: rgb(0, 114, 151);
             display: flex;
             justify-content: center;
             margin: 1.5rem auto;
-            max-width: calc(110vh - 20rem);
+            max-width: calc(110vh - 17rem);
 
             i {
                 cursor: pointer;
@@ -422,7 +428,7 @@ $deep-teal: rgb(0, 114, 151);
 
         .thumbnails {
             display: flex;
-            height: 10rem;
+            height: 8rem;
             justify-content: space-between;
             margin: 3rem 0 8rem;
             overflow-x: auto;
