Fix Edge display of feature matrix table

--- a/src/app/pages/openstax-tutor/openstax-tutor.html
+++ b/src/app/pages/openstax-tutor/openstax-tutor.html
@@ -186,11 +186,11 @@
                                 <div class="key">
                                     <div>
                                         <img alt="available indicator" src="{model.featureMatrix.availableIcon}">
-                                        Available
+                                        <div>Available</div>
                                     </div>
                                     <div>
                                         <img alt="unavailable indicator" src="{model.featureMatrix.unavailableIcon}">
-                                        Unavailable
+                                        <div>Unavailable</div>
                                     </div>
                                 </div>
                             </td>
