Add tests for low-coverage modules

--- a/src/app/pages/openstax-tutor/openstax-tutor.html
+++ b/src/app/pages/openstax-tutor/openstax-tutor.html
@@ -122,8 +122,9 @@
                                     <img class="{model.whatStudentsGet.transitioning}" alt="{model.whatStudentsGet.currentImage.description}"
                                      src="{model.whatStudentsGet.currentImage.url}">
                                  <else>
-                                     <video class="{model.whatStudentsGet.transitioning}" controls preload="metadata">
-                                         <source src="{model.whatStudentsGet.currentImage.url}" type="video/mp4">
+                                     <video class="{model.whatStudentsGet.transitioning}"
+                                     src="{model.whatStudentsGet.currentImage.url}"
+                                     controls preload="metadata">
                                      </video>
                                  </if>
                              </div>
