Hide Give sticky note after visiting give confirmation page

--- a/src/app/components/shell/sticky-note/sticky-note.scss
+++ b/src/app/components/shell/sticky-note/sticky-note.scss
@@ -12,6 +12,10 @@
     width: 100vw;
     z-index: 1;
 
+    &:empty {
+        padding: 0;
+    }
+
     &.temporary-banner {
         background-color: color(yellow);
         color: color(blue);
