Preload videos so Safari gets thumbnails

--- a/src/app/pages/openstax-tutor/openstax-tutor.scss
+++ b/src/app/pages/openstax-tutor/openstax-tutor.scss
@@ -399,6 +399,7 @@ $deep-teal: rgb(0, 114, 151);
             justify-content: center;
             margin: 1.5rem auto;
             max-width: calc(110vh - 17rem);
+            min-width: 68rem;
 
             i {
                 cursor: pointer;
